# AI-training-ReAct-agent

./: .env.example  CLAUDE.md  README.md  main.py  main_langgraph.py  pyproject.toml
app/: claude_client.py  context_window.py  langgraph_agent.py  llm_client.py  ollama_client.py  pizza_agent.py  tools.py
