[project]
name = "basic-react-agent"
version = "0.1.0"
description = "A super simple setup of a ReAct agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.66.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "openai>=2.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
